# aoc-2020

./: CMakeLists.txt  LICENSE  README.md
day_1/puzzle_1/: main.cpp
day_1/puzzle_2/: main.cpp
day_10/puzzle_1/: main.cpp
day_10/puzzle_2/: main.cpp
day_11/puzzle_1/: main.cpp
day_11/puzzle_2/: main.cpp
day_12/puzzle_1/: main.cpp
day_12/puzzle_2/: main.cpp
day_13/puzzle_1/: main.cpp
day_13/puzzle_2/: main.cpp
day_14/puzzle_1/: main.cpp
day_14/puzzle_2/: main.cpp
day_15/puzzle_1/: main.cpp
day_15/puzzle_2/: main.cpp
day_16/puzzle_1/: main.cpp
day_16/puzzle_2/: main.cpp
day_17/puzzle_1/: main.cpp
day_17/puzzle_2/: main.cpp
day_2/puzzle_1/: main.cpp
day_2/puzzle_2/: main.cpp
day_3/puzzle_1/: main.cpp
day_3/puzzle_2/: main.cpp
day_4/puzzle_1/: main.cpp
day_4/puzzle_2/: main.cpp
day_5/puzzle_1/: main.cpp
day_5/puzzle_2/: main.cpp
day_6/puzzle_1/: main.cpp
day_6/puzzle_2/: main.cpp
day_7/puzzle_1/: main.cpp
day_7/puzzle_2/: main.cpp
day_8/puzzle_1/: main.cpp
day_8/puzzle_2/: main.cpp
day_9/puzzle_1/: main.cpp
day_9/puzzle_2/: main.cpp
